# irp

./: .gitignore  Cargo.toml
irp-daemon/: Cargo.toml
irp-daemon/src/: connection.rs  main.rs  sim_reader.rs
irp-proto/: Cargo.toml  build.rs
irp-proto/proto/: irp.proto
irp-proto/src/: lib.rs
irp-reader/: Cargo.toml
irp-reader/examples/: live_telemetry.rs  record_telemetry.rs  replay_telemetry.rs
irp-reader/src/: error.rs  lib.rs  query.rs  reader.rs  recorder.rs  snapshot.rs  source.rs
irp-reader/src/backend/: file.rs  mod.rs  windows.rs
irp-server/: Cargo.toml
irp-server/src/: main.rs  registry.rs
irp-web/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
irp-web/src/: App.tsx
