[package]
name = "irp-daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = "0.3.6"
futures-util = "0.3.32"
irp-proto = { version = "0.1.0", path = "../irp-proto", features = ["client"] }
irp-reader = { version = "0.1.0", path = "../irp-reader" }
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros"] }
