[package]
name = "irp-server"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = "0.3.6"
axum = "0.8.8"
futures-util = "0.3.32"
irp-proto = { version = "0.1.0", path = "../irp-proto", features = ["server"] }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.14.5", default-features = false, features = ["router"] }
tower-http = { version = "0.6.8", features = ["fs"] }
